# autoload

./: CMakeLists.txt  README.md  conanfile.py
example/: CMakeLists.txt  example.cpp  library.cpp
example/lib/: testlib.c  unsafe.c
include/: autoload.h
tests/: CMakeLists.txt  main.cpp
